# miso-firebase-tutorial

./: .gitignore  LICENSE  README.md
lambdatalk/: default.nix  lambdatalk.cabal
lambdatalk-start/: Makefile  database.rules.json  lambdatalk.cabal
lambdatalk-start/public/: index.html  style.css
lambdatalk-start/src/Web/LambdaTalk/: Firebase.hs  Model.hs  Subscription.hs  Update.hs  View.hs
lambdatalk/app/: Main.hs
lambdatalk/public/: style.css
lambdatalk/src/Web/LambdaTalk/: Firebase.hs  Model.hs  Subscription.hs  Update.hs  View.hs
