name:                   lambdatalk
version:                0.1.0.0
synopsis:               GHCJS Miso + Firebase Tutorial
category:               Web
build-type:             Simple
cabal-version:          >=1.10

executable lambdatalk
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base
                      , miso
                      , lambdatalk
    default-language:   Haskell2010

library
    hs-source-dirs:     src
    exposed-modules:    Web.LambdaTalk.Firebase
                        Web.LambdaTalk.Model
                        Web.LambdaTalk.Subscription
                        Web.LambdaTalk.Update
                        Web.LambdaTalk.View
    build-depends:      base
                      , jsaddle
                      , lens
                      , miso
                      , text
    default-language:   Haskell2010
